add_subdirectory(core)
# TODO: add_subdirectory(declarative)
add_subdirectory(gui)
add_subdirectory(multimedia)
add_subdirectory(network)
# TODO: add_subdirectory(opengl)
# TODO: add_subdirectory(phonon)
# TODO: add_subdirectory(script)
# TODO: add_subdirectory(scripttools)
# TODO: add_subdirectory(sql)
# TODO: add_subdirectory(svg)
# TODO: add_subdirectory(tools)
add_subdirectory(tools/uic)
add_subdirectory(webkit)
# TODO: add_subdirectory(xml)
# TODO: add_subdirectory(xmlpatterns)